[package]
name = "eve"
version = "0.1.0"
authors = ["luhuaei"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "<0.19.4" }
surfman = { version = "0.3.0", features = ["sm-winit", "sm-x11"] }
gl = { version = "0.14" }
euclid = { version = "0.20" }
pathfinder_canvas = { path = "pathfinder/canvas" }
pathfinder_gl = { path = "pathfinder/gl" }
pathfinder_geometry = { path = "pathfinder/geometry" }
pathfinder_color = { path = "pathfinder/color" }
pathfinder_renderer = { path = "pathfinder/renderer" }
pathfinder_resources = { path = "pathfinder/resources" }
pathfinder_gpu = { path = "pathfinder/gpu" }
